--- a/ci-droid-tasks-consumer-infrastructure/pom.xml
+++ b/ci-droid-tasks-consumer-infrastructure/pom.xml
@@ -11,7 +11,18 @@
     <version>2.0.0-SNAPSHOT</version>
     <description>ci-droid-tasks-consumer infrastructure</description>
 
-    <dependencies>
+
+<dependencies>
+
+        <!-- CVE-2022-22965, forcing Spring Cloud Function context jar  from 3.2.2 -> 3.2.3
+            we can remove this once a new version of spring-cloud-dependencies
+            doesn't bring Spring Cloud function 3.2.2 anymore
+                                                                      -->
+        <dependency>
+          <groupId>org.springframework.cloud</groupId>
+          <artifactId>spring-cloud-function-context</artifactId>
+          <version>3.2.3</version>
+        </dependency>
 
         <dependency>
             <groupId>com.societegenerale.ci-droid.tasks-consumer</groupId>
@@ -24,7 +35,6 @@
             <artifactId>springdoc-openapi-ui</artifactId>
             <version>${springdoc.version}</version>
         </dependency>
-
 
 
         <dependency>
@@ -84,5 +94,8 @@
             <artifactId>logback-classic</artifactId>
         </dependency>
 
-    </dependencies>
+
+
+
+</dependencies>
 </project>
